[package]
name = "delaymapi"
version = "0.1.0"
authors = ["Robbe Van Herck <robbe@robbevanherck.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtfs-structures = { version = "0.22.0", features = ["read-url"] }
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]
