[package]
name = "delaymapi"
version = "0.1.0"
authors = ["Robbe Van Herck <robbe@robbevanherck.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtfs-structures = "0.22"
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
chrono = "0.4"
chrono-tz = "0.5"
http = "0.2.3"
protobuf = "2.22.0"

[build-dependencies]
protoc-rust = "2.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]
